Revise HTML structure and content for Kayu Kebek
Updated the HTML structure and added content for the Desa Wisata Kayu Kebek website.

--- a/kayu kebek.html
+++ b/kayu kebek.html
@@ -1,5 +1,16 @@
-<sssss
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Desa Wisata Kayu Kebek</title>
+</head>
+<body>
 
+  <h1>Desa Wisata Kayu Kebek</h1>
+  <p>Alhamdulillah, website sudah tampil 🌿</p>
+
+</body>
+</html>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
@@ -475,3 +486,4 @@ footer{
 
 </body>
 </html>
+
